--- a/index.html
+++ b/index.html
@@ -86,6 +86,19 @@
                 </div>
             </div>   
         </section>
+        <section class="sponsors-section">
+            <h2 class="sponsors-title">Our Sponspors</h2>
+            <p class="sponsors-paragraph">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
+            </p>
+            <div class="sponsors-image-container">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+        </section>
     </main>
     <footer></footer>
   </body>
